--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Tomado de Miguel Angel Zagaceta Llanca 2023">
 
-<title>Niveles de porcinaza y densidades de simbra de maiz</title>
+<title>Niveles de porcinaza y densidad de siembra sobre el rendimiento de maiz</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -168,7 +168,7 @@ window.Quarto = {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Niveles de porcinaza y densidades de simbra de maiz</h1>
+<h1 class="title">Niveles de porcinaza y densidad de siembra sobre el rendimiento de maiz</h1>
 </div>
 
 
